change js file uri

--- a/AsciiImage.html
+++ b/AsciiImage.html
@@ -13,7 +13,7 @@
             clear: both;
         }
     </style>
-    <script type="text/javascript" src="../js/Photoshop.js"></script>
+    <script type="text/javascript" src="AsciiImage.js"></script>
     <script type="text/javascript">
         function imagesSelected(myFiles) {
             var imageReader = new FileReader();
